Fix some PMD warnings